:bug: Fix overflow causing weird scroll

--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -13,6 +13,13 @@
   background-size: 64px 64px;
 }
 
+#players {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
 #players > .player {
   height: 100px;
   width: 100px;
